# sighte

./: LICENSE  Makefile  README.md  config.h  meson.build  sighte.1  sighte.c  sighte.h
